# idax

./: .gitignore  .gitmodules  BACKLOG.md  CMakeLists.txt  README.md  agents.md  findings.md  fix.sh  pyproject.toml  test_license.sh  todo.md
bindings/node/: .npmignore  CMakeLists.txt  agents.md  package-lock.json  package.json  tsconfig.json
bindings/node/examples/: binary_forensics.ts  change_tracker.js  change_tracker.ts  class_reconstructor.ts  complexity_metrics.js  complexity_metrics.ts  ida2py_port.ts  idalib_dump_port.ts  idalib_lumina_port.ts  sink_tracer.ts  tsconfig.json
bindings/node/lib/: index.d.ts  index.js
bindings/node/scripts/: install.js
bindings/node/src/: addon.cpp  address_bind.cpp  analysis_bind.cpp  bookmark_bind.cpp  comment_bind.cpp  data_bind.cpp  database_bind.cpp  decompiler_bind.cpp  diagnostics_bind.cpp  directory_bind.cpp  entry_bind.cpp  event_bind.cpp  exception_bind.cpp  fixup_bind.cpp  function_bind.cpp  helpers.cpp  helpers.hpp  instruction_bind.cpp  lines_bind.cpp  lumina_bind.cpp  name_bind.cpp  navigation_bind.cpp  offset_bind.cpp  parser_bind.cpp  problem_bind.cpp  registers_bind.cpp  registry_bind.cpp  script_bind.cpp  search_bind.cpp  segment_bind.cpp  storage_bind.cpp  type_bind.cpp  ui_bind.cpp  undo_bind.cpp  xref_bind.cpp
bindings/node/test/: harness.js  integration.test.js  registers.integration.test.js  unit.test.js
bindings/python/: API.md  CMakeLists.txt  DECLARATION_AUDIT.md  README.md  TUTORIAL.md  api_manifest.json  header_audit.json
bindings/python/examples/: action.py  decompile.py  inventory.py
bindings/python/src/idax/: __init__.py  __init__.pyi  _runtime.py  address.py  address.pyi  analysis.py  analysis.pyi  bookmark.py  bookmark.pyi  comment.py  comment.pyi  core.py  core.pyi  data.py  data.pyi  database.py  database.pyi  debugger.py  debugger.pyi  decompiler.py  decompiler.pyi  diagnostics.py  diagnostics.pyi  directory.py  directory.pyi  entry.py  entry.pyi  error.py  error.pyi  event.py  event.pyi  exception.py  exception.pyi  fixup.py  fixup.pyi  function.py  function.pyi  graph.py  graph.pyi  instruction.py  (+43 more)
bindings/python/src/native/: address_bind.cpp  analysis_bind.cpp  bookmark_bind.cpp  comment_bind.cpp  common.cpp  common.hpp  core_bind.cpp  data_bind.cpp  database_bind.cpp  debugger_bind.cpp  decompiler_bind.cpp  decompiler_ctree_bind.cpp  decompiler_microcode_bind.cpp  decompiler_python.hpp  diagnostics_bind.cpp  directory_bind.cpp  entry_bind.cpp  event_bind.cpp  exception_bind.cpp  fixup_bind.cpp  function_bind.cpp  graph_bind.cpp  instruction_bind.cpp  lines_bind.cpp  loader_bind.cpp  lumina_bind.cpp  module.cpp  name_bind.cpp  navigation_bind.cpp  offset_bind.cpp  opaque_handle.hpp  parser_bind.cpp  path_bind.cpp  plugin_bind.cpp  problem_bind.cpp  processor_bind.cpp  registers_bind.cpp  registry_bind.cpp  script_bind.cpp  search_bind.cpp  (+8 more)
bindings/python/tests/: registers_runtime_probe.py  test_distribution_audit.py  test_foundation.py  test_ida_runtime.py  test_manifest.py  test_registers_runtime.py
bindings/rust/: Cargo.toml  LICENSE
bindings/rust/idax/: Cargo.toml  README.md  build.rs
bindings/rust/idax-build/: Cargo.toml
bindings/rust/idax-build/src/: lib.rs
bindings/rust/idax-sys/: Cargo.toml  README.md  build.rs  build_support.rs
bindings/rust/idax-sys/shim/: idax_shim.cpp  idax_shim.h
bindings/rust/idax-sys/src/: bindings.rs  lib.rs
examples/: CMakeLists.txt  README.md
examples/full/: jbc_common.hpp
examples/loader/: advanced_loader.cpp  jbc_full_loader.cpp  minimal_loader.cpp
examples/plugin/: abyss_port_plugin.cpp  action_plugin.cpp  auto_enum_port_plugin.cpp  decompiler_plugin.cpp  deep_analysis_plugin.cpp  diaphora_exact_port_plugin.cpp  diaphora_port_LICENSE.txt  drawida_port_plugin.cpp  drawida_port_widget.cpp  drawida_port_widget.hpp  driverbuddy_port_plugin.cpp  driverbuddy_wdf_slots.inc  event_monitor_plugin.cpp  ida_names_port_bridge.hpp  ida_names_port_plugin.cpp  ida_names_port_widget.cpp  idapcode_port_plugin.cpp  intelligent_inliner_port_plugin.cpp  lifter_port_plugin.cpp  magic_strings_port_plugin.cpp  qtform_renderer_plugin.cpp  qtform_renderer_widget.cpp  qtform_renderer_widget.hpp  storage_metadata_plugin.cpp  symless_port_LICENSE.txt  symless_structure_port_plugin.cpp
examples/procmod/: advanced_procmod.cpp  jbc_full_procmod.cpp  minimal_procmod.cpp
examples/tools/: ida2py_port.cpp  idalib_dump_port.cpp  idalib_lumina_port.cpp
integration/add_subdirectory/: CMakeLists.txt
integration/fetch_content/: CMakeLists.txt
tests/integration/: CMakeLists.txt  analysis_entry_lines_torture_test.cpp  bookmark_roundtrip_test.cpp  cross_domain_torture_test.cpp  data_mutation_safety_test.cpp  debugger_ui_graph_event_test.cpp  decompiler_edge_cases_test.cpp  decompiler_storage_hardening_test.cpp  diaphora_referent_metadata_test.cpp  directory_roundtrip_test.cpp  event_stress_test.cpp  exception_roundtrip_test.cpp  fixup_relocation_test.cpp  instruction_decode_behavior_test.cpp  loader_processor_scenario_test.cpp  name_comment_xref_search_test.cpp  named_type_iterator_test.cpp  navigation_roundtrip_test.cpp  offset_reference_roundtrip_test.cpp  operand_and_text_test.cpp  operand_function_torture_test.cpp  parser_roundtrip_test.cpp  performance_benchmark_test.cpp  problem_roundtrip_test.cpp  register_tracking_roundtrip_test.cpp  registry_roundtrip_test.cpp  run_with_temp_fixture.cmake  script_roundtrip_test.cpp  segment_function_edge_cases_test.cpp  segment_register_roundtrip_test.cpp  smoke_test.cpp  string_source_metadata_test.cpp  type_data_comment_torture_test.cpp  type_roundtrip_test.cpp  undo_roundtrip_test.cpp
tests/unit/: CMakeLists.txt  address_range_torture_test.cpp  api_surface_parity_test.cpp  ci_action_pins_test.py  ci_log_privacy_test.py  core_options_torture_test.cpp  core_unit_test.cpp  diagnostics_torture_test.cpp  diaphora_exact_core_test.cpp  error_torture_test.cpp  named_types_unit_test.cpp  processor_bridge_validation_test.cpp  procmod_validation_scripts_test.py  repository_privacy_test.py  select_hcli_license_test.py
(+264 files in other folders)
