[workspace]
resolver = "2"
members = ["idax-sys", "idax"]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Kenan Sulayman"]
license = "MIT"
repository = "https://github.com/19h/idax"
homepage = "https://github.com/19h/idax"
description = "Rust bindings for the IDA SDK via idax"
keywords = ["ida", "ida-pro", "reverse-engineering", "disassembler", "binary-analysis"]
categories = ["api-bindings", "development-tools"]

[workspace.dependencies]
idax-sys = { path = "idax-sys", version = "0.3.0" }
thiserror = "2"
bitflags = "2"
